{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 49,
  "lineage": "b1211976-7aca-3898-a06b-5186b46e5de9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0fc25dc121f05a6",
            "association_id": "eipassoc-0bd9cb2d9c4953c95",
            "domain": "vpc",
            "id": "eipalloc-0c0fc25dc121f05a6",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0afaddc5a8b4a3bb9",
            "private_dns": "ip-10-0-0-209.us-west-2.compute.internal",
            "private_ip": "10.0.0.209",
            "public_dns": "ec2-44-237-3-22.us-west-2.compute.amazonaws.com",
            "public_ip": "44.237.3.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013cc9c8bf7312534",
            "association_id": "eipassoc-0968f4a8bb8720467",
            "domain": "vpc",
            "id": "eipalloc-013cc9c8bf7312534",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0910a63ee3c460b29",
            "private_dns": "ip-10-0-1-98.us-west-2.compute.internal",
            "private_ip": "10.0.1.98",
            "public_dns": "ec2-35-81-17-135.us-west-2.compute.amazonaws.com",
            "public_ip": "35.81.17.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:internet-gateway/igw-0defe5a42f927569c",
            "id": "igw-0defe5a42f927569c",
            "owner_id": "664021239898",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            },
            "vpc_id": "vpc-000f7a62630256132"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c0fc25dc121f05a6",
            "connectivity_type": "public",
            "id": "nat-085b7c7ea73da27c9",
            "network_interface_id": "eni-0afaddc5a8b4a3bb9",
            "private_ip": "10.0.0.209",
            "public_ip": "44.237.3.22",
            "subnet_id": "subnet-085f972bfc3f7e328",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-013cc9c8bf7312534",
            "connectivity_type": "public",
            "id": "nat-08d7607ea92f31590",
            "network_interface_id": "eni-0910a63ee3c460b29",
            "private_ip": "10.0.1.98",
            "public_ip": "35.81.17.135",
            "subnet_id": "subnet-04b7c774cbf44060c",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:route-table/rtb-09e06ad953ef7a53b",
            "id": "rtb-09e06ad953ef7a53b",
            "owner_id": "664021239898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085b7c7ea73da27c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private0-vpc"
            },
            "tags_all": {
              "Name": "private0-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f7a62630256132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:route-table/rtb-024d197640524345c",
            "id": "rtb-024d197640524345c",
            "owner_id": "664021239898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d7607ea92f31590",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1-vpc"
            },
            "tags_all": {
              "Name": "private1-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f7a62630256132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:route-table/rtb-0fc6f73eb0b23df75",
            "id": "rtb-0fc6f73eb0b23df75",
            "owner_id": "664021239898",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0defe5a42f927569c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-vpc"
            },
            "tags_all": {
              "Name": "public-vpc"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f7a62630256132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d09a32396a6e4a6",
            "route_table_id": "rtb-0fc6f73eb0b23df75",
            "subnet_id": "subnet-085f972bfc3f7e328"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0479a2b4c3113d138",
            "route_table_id": "rtb-0fc6f73eb0b23df75",
            "subnet_id": "subnet-04b7c774cbf44060c"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:security-group/sg-0392c428fca42da32",
            "description": "Allow internal traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0392c428fca42da32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All trafic from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "main",
            "name_prefix": "",
            "owner_id": "664021239898",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f7a62630256132"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:subnet/subnet-09ac71f27ee2ef62f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ac71f27ee2ef62f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664021239898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private0-vpc"
            },
            "tags_all": {
              "Name": "private0-vpc"
            },
            "vpc_id": "vpc-000f7a62630256132"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:subnet/subnet-07e5844def9739030",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e5844def9739030",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664021239898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1-vpc"
            },
            "tags_all": {
              "Name": "private1-vpc"
            },
            "vpc_id": "vpc-000f7a62630256132"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:subnet/subnet-085f972bfc3f7e328",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085f972bfc3f7e328",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664021239898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public0-vpc"
            },
            "tags_all": {
              "Name": "public0-vpc"
            },
            "vpc_id": "vpc-000f7a62630256132"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:subnet/subnet-04b7c774cbf44060c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b7c774cbf44060c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "664021239898",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1-vpc"
            },
            "tags_all": {
              "Name": "public1-vpc"
            },
            "vpc_id": "vpc-000f7a62630256132"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:664021239898:vpc/vpc-000f7a62630256132",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09480b0072901a74f",
            "default_route_table_id": "rtb-05452141972a75617",
            "default_security_group_id": "sg-0ac1249f8e1acd976",
            "dhcp_options_id": "dopt-0d65e2c89025f0f61",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-000f7a62630256132",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05452141972a75617",
            "owner_id": "664021239898"
          }
        }
      ]
    }
  ]
}